--- a/license.html
+++ b/license.html
@@ -14,41 +14,18 @@
             <body>
                     <header>
                               <nav class="navbar navbar-dark bg-dark navbar-expand-sm" role="navigation">
-      <div class="container-fluid">
-                  <div class="navbar-header">
-              <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
-                  <span class="navbar-toggler-icon"></span>
-  </button>
-          <a href="download.html" class="navbar-brand">
-    Testrecorder
-  </a>
-  </div>
-              <div class="collapse navbar-collapse">
-      <ul class="navbar-nav">
-              <li class="nav-item">  <a class="nav-link" href="index.html">
-    Home
-  </a></li>
-          <li class="nav-item">  <a class="nav-link" href="download.html">
-    Get it!
-  </a></li>
-          <li class="nav-item active">  <a class="nav-link" href="license.html">
-    License
-  </a></li>
-  </ul>
-  </div>
-  </div>
+    <div class="container-fluid">            <div class="navbar-header">        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">            <span class="navbar-toggler-icon"></span></button>
+        <a href="download.html" class="navbar-brand">Testrecorder</a></div>
+            <div class="collapse navbar-collapse"><ul class="navbar-nav">        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="download.html">Get it!</a></li>
+        <li class="nav-item active"><a class="nav-link" href="license.html">License</a></li></ul></div></div>
   </nav>
               
   </header>
               <main>
-      <div class="container">
-                  <div class="page-header">
-      <h1>License</h1>
-  </div>
+    <div class="container">            <div class="page-header"><h1>License</h1></div>
       <section>
-      <div class="alert alert-info" role="alert">
-    Testrecorder is published under the GNU Lesser General Public License (Version 3).
-  </div>
+    <div class="alert alert-info" role="alert">Testrecorder is published under the GNU Lesser General Public License (Version 3).</div>
   </section>
             <h3 style="text-align: center;">GNU LESSER GENERAL PUBLIC LICENSE</h3> 
 <p style="text-align: center;">Version 3, 29 June 2007</p> 
@@ -98,8 +75,7 @@
 <h4><a name="section6"></a>6. Revised Versions of the GNU Lesser General Public License.</h4> 
 <p>The Free Software Foundation may publish revised and/or new versions of the GNU Lesser General Public License from time to time. Such new versions will be similar in spirit to the present version, but may differ in detail to address new problems or concerns.</p> 
 <p>Each version is given a distinguishing version number. If the Library as you received it specifies that a certain numbered version of the GNU Lesser General Public License “or any later version” applies to it, you have the option of following the terms and conditions either of that published version or of any later version published by the Free Software Foundation. If the Library as you received it does not specify a version number of the GNU Lesser General Public License, you may choose any version of the GNU Lesser General Public License ever published by the Free Software Foundation.</p> 
-<p>If the Library as you received it specifies that a proxy can decide whether future versions of the GNU Lesser General Public License shall apply, that proxy's public statement of acceptance of any version is permanent authorization for you to choose that version for the Library.</p>
-  </div>
+<p>If the Library as you received it specifies that a proxy can decide whether future versions of the GNU Lesser General Public License shall apply, that proxy's public statement of acceptance of any version is permanent authorization for you to choose that version for the Library.</p></div>
   </main>
               <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
               <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
