--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ public class FizzBuzz {
 <pre><code>    fizzbuzz.SerializationProfile
 </code></pre>
 <ul>
-<li><code>net.amygdalum.testrecorder.SnapshotConsumer</code> containing a single line:</li>
+<li><code>net.amygdalum.testrecorder.profile.SnapshotConsumer</code> containing a single line:</li>
 </ul>
 <pre><code>    fizzbuzz.TestGenerator
 </code></pre>
