--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
               <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css"/>
                   <title>Testrecorder - Generate Test Fixtures from Runnable Java Code</title>
       <meta name="description" content="Testrecorder ist a semi-automatic unit test generator for Java. Testrecorder is based on capturing and replaying the states before and after method calls. The generated result is a pure Java JUnit test."/>
-      <meta name="keywords" content="automatic,testing,recorder,code generator,test generator,generate tests,Java,JUnit,unit test,characterization test,capture,replay"/>
+      <meta name="keywords" content="automatic,testing,recorder,generation,code generator,test generator,generate tests,Java,JUnit,unit test,characterization test,capture,replay"/>
       <link rel="canonical" href="http://testrecorder.amygdalum.net"/>
   </head>
             <body>
